content/styles/content.css
/* Style for all custom site content. */

/* General variables: */

* {
	--view-width: 856px;
	--narrow-width: 616px;
}

/* Import fonts: */

@font-face {
	font-family: FiraSans;
	src: url("/fonts/fira_sans/FiraSans-Regular.otf") format("opentype");
}

@font-face {
	font-family: MPLUS1;
	src: url("/fonts/mplus1/MPLUS1-VariableFont_wght.ttf") format("truetype");
}

@font-face {
	font-family: MPLUS1Code;
	src: url("/fonts/mplus1/MPLUS1Code-VariableFont_wght.ttf") format("truetype");
}

@font-face {
	font-family: PhosphorFill;
	src: url("/styles/phosphor/Phosphor-Fill.ttf") format("truetype");
}

/* Override pico variables: */

* {
	--pico-color: var(--text);
	--pico-primary: var(--primary);
	--pico-secondary: var(--secondary);
	--pico-primary-under: var(--primary);
	--pico-secondary-under: var(--primary);
	--pico-underline: var(--primary);
	--pico-mark-color: var(--card);
	--pico-mark-background-color: var(--secondary);

	--pico-typography-spacing-top: 0.2rem !important;
	--pico-typography-spacing-vertical: 1rem !important;

	--pico-blockquote-border-color: var(--card);
}

/* Override built-in styles. */

body * {
	font-family: MPLUS1;
	/*font-weight: 500;*/
}

body {
	color: var(--text);
	display: flex;
	flex-direction: column;
	width: 100vw;
	min-height: 100vh;
	background-color: var(--background);
}

body *:focus {
	outline-width: 1px !important;
	outline-color: var(--primary) !important;
	outline-style: solid;
	border-color: var(--primary) !important;
	box-shadow: 0 0 var(--primary) !important;
}

main,
article {
	/* display: flex; */
	/* flex-direction: column; */
	/* width: var(--view-width); */
	width: 100%;
	max-width: var(--view-width);
	padding: 3em 1em;
	margin-left: auto;
	margin-right: auto;
	line-height: 1.5;
	/* font-size: 1.25em; */
}

footer {
	margin-top: auto;
}

footer p {
	margin-bottom: 0px;
}

h1 {
	font-size: 3rem;
}

h1,
h4 {
	color: var(--primary);
}

h2 {
	font-size: 1.75rem;
}

h2,
h5 {
	color: var(--secondary);
}

h3,
h6 {
	color: var(--accent);
}

p,
a,
li {
	color: var(--text);
	font-weight: 500;
	font-size: 0.8rem;
}

a:visited {
	color: var(--text);
}

a.contrast {
	color: var(--accent);
}
a.contrast:visited {
	color: var(--accent);
}

a > code {
	text-decoration: underline;
	text-decoration-color: var(--primary);
}

code {
	padding: 0.1rem 0.2rem;
}

code,
code.code,
pre.code,
.code code,
pre > code,
.hljs {
	color: var(--text);
	background: var(--card) !important;
	font-family: MPLUS1Code;
	font-weight: 500;
	font-size: 0.8rem;
}

.chip {
	font-size: 0.8rem;
	color: var(--background);
	background: var(--secondary);
	font-weight: 500;
	border-radius: calc(infinity * 1px);
	margin: 0.25em;
	padding-left: 0.5em;
	padding-right: 0.5em;
}

dl dd {
	margin-top: 0.2rem;
	margin-bottom: 0.2rem;
}

blockquote,
.blog-markdown .markdown-alert {
	display: block;
	margin: var(--pico-typography-spacing-vertical) 0;
	padding: var(--pico-spacing);
	border-right: none;
	border-left: 0.25rem solid var(--pico-blockquote-border-color);
	border-inline-start: 0.25rem solid var(--pico-blockquote-border-color);
	border-inline-end: none;
	margin-top: 0.25rem;
	margin-bottom: 0.25rem;
	padding-top: 0.1rem;
	padding-bottom: 0.1rem;
}

blockquote p,
.blog-markdown .markdown-alert p {
	padding-top: 0.1rem;
	padding-bottom: 0.1rem;
	--pico-typography-spacing-vertical: 0.25rem !important;
}

html header {
	position: sticky;
	top: 0;
	width: 100vw;
	padding-top: 0px;
	padding-bottom: 0px;
	background-color: var(--card);
}

nav {
	/* background-color: var(--card); */
	/* position: sticky; */
	overflow: show;
	/* overflow: hidden; */
	/* padding-left: 10rem; */
	/* padding-right: 10rem; */
	margin-left: auto;
	margin-right: auto;
	padding-left: 0.25rem;
	padding-right: 0.25rem;
	max-width: var(--view-width);
}

nav li {
	padding-top: 0.5em;
	padding-bottom: 0.5em;
}

.divider {
	color: var(--text);
	display: block;
	margin-top: 0.5em;
	margin-bottom: 0.5em;
	margin-left: auto;
	margin-right: auto;
	border-style: inset;
	border-width: 1px;
}

a.hidden {
	text-decoration: none;
}

a.hidden:focus,
a.hidden:hover {
	text-decoration: underline;
}

mark {
	border-radius: var(--pico-border-radius);
	padding: 0rem 0.125rem;
}

/* General purpose classes: */

.flex-row {
	display: flex;
	flex-direction: row;
	flex: 0 auto;
}

.flex-row-static {
	display: flex;
	flex-direction: row;
	flex: 0 auto;
}

.flex-col {
	display: flex;
	flex-direction: column;
	flex: 0 auto;
}

.flex-wrap {
	flex-wrap: wrap;
}

.flex-1 {
	flex: 1;
}

.flex-auto {
	flex: auto;
}

.flex-initial {
	flex: 0 auto;
}

.narrow {
	max-width: var(--narrow-width);
	margin-left: auto;
	margin-right: auto;
}

.mx-auto {
	margin-inline: auto;
}

.mx-sm {
	margin-inline: 2rem;
}

.mx-md {
	margin-inline: 4rem;
}

.mx-lg {
	margin-inline: 6rem;
}

.my-auto {
	margin-block: auto;
}

.my-sm {
	margin-block: 2rem;
}

.my-md {
	margin-block: 4rem;
}

.my-lg {
	margin-block: 6rem;
}

.ml-auto {
	margin-left: auto;
}

.mr-auto {
	margin-left: auto;
}

.elem-center {
	margin-inline: auto;
	/* margin-left: auto; */
	/* margin-right: auto; */
}

.text-center {
	text-align: center;
}

.box {
	background-color: var(--card);
}

.section {
	padding-top: 1rem;
	padding-bottom: 1rem;
}

.padded-sm {
	padding: 2px;
}

.padded-md {
	padding: 0.5rem;
}

.padded-lg {
	padding: 1rem;
}

.empty {
	color: var(--text);
	padding-top: 1rem;
	padding-bottom: 1rem;
	background-color: inherit;
}

.hero {
	padding-top: 1.5rem;
	padding-bottom: 1.5rem;
}

/* Components and overrides: */

img {
	border-radius: var(--pico-border-radius);
}

img.img-circle {
	border-radius: 50%;
	margin-left: auto;
	margin-right: auto;
}

img.img-square {
	border-radius: 0%;
	margin-left: auto;
	margin-right: auto;
}

img.img-large {
	max-width: 256px;
	max-height: 256px;
}

img.img-center {
	display: block;
	margin-inline: auto;
}

img.img-fit-contain {
	object-fit: contain;
}

.icon-link {
	font-size: 6rem;
	display: block;
	text-decoration: none;
}

.icon-link:focus,
.icon-link:hover {
	text-decoration: underline;
	text-decoration-color: var(--text);
}

.icon-link-inline {
	display: inline-block;
	text-decoration: none;
}

.icon-link-inline:focus,
.icon-link-inline:hover {
	text-decoration: underline;
	text-decoration-color: var(--text);
}

.btn,
.btn-primary,
.btn-primary:hover,
.btn-primary:focus,
.btn.btn-primary,
.btn.btn-primary:hover,
.btn.btn-primary:focus {
	color: var(--text);
	background: var(--primary);
	border-color: var(--primary);
}

.btn.btn-link,
.btn-link {
	color: var(--text);
	border: none;
	border-width: none;
}

.btn.btn-link:hover,
.btn-link:hover,
.btn.btn-link:active,
.btn.btn-link:focus {
	color: var(--text);
	border: none;
	border-width: none;
}

.divider {
	border-top-color: var(--text);
	height: 0.1rem;
}

.blog-markdown h1::before {
	content: "# ";
}

.blog-markdown h2 {
	color: var(--secondary);
}

.blog-markdown h2::before {
	content: "## ";
}

.blog-markdown h3::before {
	content: "### ";
}

.blog-markdown h4::before {
	content: "#### ";
}

.blog-markdown h5::before {
	content: "##### ";
}

.blog-markdown h6::before {
	content: "###### ";
}

.blog-markdown strong {
	color: var(--primary);
}

.blog-markdown em {
	color: var(--accent);
}

.blog-markdown img {
	max-width: 100%;
}

.blog-markdown a {
	color: var(--primary) !important;
}

.blog-markdown li {
	margin-bottom: 0px;
}

.blog-markdown .markdown-alert .markdown-alert-title {
	font-weight: 800;
	font-size: 1.2em;
	color: var(--accent);
}

.markdown-alert .markdown-alert-title::before {
	font-family: "PhosphorFill";
	margin-top: auto;
	margin-bottom: auto;
	margin-right: 0.4em;
	/* line-height: 150%; */
	font-size: 90%;
	font-weight: 100;
}

.markdown-alert-note .markdown-alert-title::before {
	content: "\E2CE";
}

.markdown-alert-tip .markdown-alert-title::before {
	content: "\E2DC";
}

.markdown-alert-important .markdown-alert-title::before {
	content: "\EE44";
}

.markdown-alert-caution .markdown-alert-title::before {
	content: "\E4E0";
}

.markdown-alert-warning .markdown-alert-title::before {
	content: "\E7FC";
}

.card {
	background-color: var(--card);
	border-color: var(--primary);
}

.blog-card:hover {
	/* Historically, background-color was selection. */
	background-color: var(--text);
}

.click-box:hover {
	cursor: pointer;
}

.tags {
	display: flex;
	flex-wrap: wrap;
}

.tag {
	font-size: 0.8rem;
	color: var(--background);
	background: var(--accent);
	font-weight: 500;
	border-radius: calc(infinity * 1px);
	margin: 0.25em;
	padding-left: 0.5em;
	padding-right: 0.5em;
	text-decoration-color: transparent;
}

.tag:visited {
	color: var(--background);
	text-decoration-color: transparent;
}

.tag.selected {
	text-decoration-color: color(var(--background));
}

.tag:focus,
.tag:hover {
	text-decoration-color: color(var(--background));
}

.tag::before {
	content: "#";
}

.spoiler {
	color: var(--card);
	background-color: var(--card);
	transition: filter 0.1s ease-in-out;
	border-radius: var(--pico-border-radius);
	padding: 0rem 0.125rem;
}

.spoiler::before,
.spoiler::after {
	content: "||";
}

.spoiler:hover,
.spoiler:focus {
	color: var(--text);
	background-color: var(--card);
}

/* Adjustments on tiny screens. */

@media (max-width: 600px) {
	.icon-link i {
		font-size: 3rem;
	}

	.flex-row {
		flex-direction: column;
	}
}

